--- a/Starter_Code/part_1_mars_news.ipynb
+++ b/Starter_Code/part_1_mars_news.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Module 12 Challenge\n",
+    "# Module 11 Challenge\n",
     "## Deliverable 1: Scrape Titles and Preview Text from Mars News"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -159,15 +159,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loop through the text elements\n",
     "# Extract the title and preview text from the elements\n",
-    "for sam in articles: \n",
-    "    header = sam.find('div', class_ = 'content_title').text.strip()\n",
-    "    preview = sam.find('div', class_ = 'article_teaser_body')\n",
+    "for i in range(len(titles)): \n",
+    "    header = titles[i].text\n",
+    "    preview = previews[i].text\n",
     "\n",
     "# Store each title and preview pair in a dictionary\n",
     "    summary_dict = {\n",
@@ -181,16 +181,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[{'header': \"NASA's MAVEN Observes Martian Light Show Caused by Major Solar Storm\",\n",
+       "  'preview': 'For the first time in its eight years orbiting Mars, NASA’s MAVEN mission witnessed two different types of ultraviolet aurorae simultaneously, the result of solar storms that began on Aug. 27.'},\n",
+       " {'header': \"NASA Prepares to Say 'Farewell' to InSight Spacecraft\",\n",
+       "  'preview': 'A closer look at what goes into wrapping up the mission as the spacecraft’s power supply continues to dwindle.'},\n",
+       " {'header': 'NASA and ESA Agree on Next Steps to Return Mars Samples to Earth',\n",
+       "  'preview': 'The agency’s Perseverance rover will establish the first sample depot on Mars.'},\n",
+       " {'header': \"NASA's InSight Lander Detects Stunning Meteoroid Impact on Mars\",\n",
+       "  'preview': 'The agency’s lander felt the ground shake during the impact while cameras aboard the Mars Reconnaissance Orbiter spotted the yawning new crater from space.'},\n",
+       " {'header': 'NASA To Host Briefing on InSight, Mars Reconnaissance Orbiter Findings',\n",
+       "  'preview': 'Scientists from two Mars missions will discuss how they combined images and data for a major finding on the Red Planet.'},\n",
+       " {'header': 'Why NASA Is Trying To Crash Land on Mars',\n",
+       "  'preview': 'Like a car’s crumple zone, the experimental SHIELD lander is designed to absorb a hard impact.'},\n",
+       " {'header': 'Curiosity Mars Rover Reaches Long-Awaited Salty Region',\n",
+       "  'preview': 'After years of climbing, the Mars rover has arrived at a special region believed to have formed as Mars’ climate was drying.'},\n",
+       " {'header': 'Mars Mission Shields Up for Tests',\n",
+       "  'preview': 'Protecting Mars Sample Return spacecraft from micrometeorites requires high-caliber work.'},\n",
+       " {'header': \"NASA's InSight Waits Out Dust Storm\",\n",
+       "  'preview': 'InSight’s team is taking steps to help the solar-powered lander continue operating for as long as possible.'},\n",
+       " {'header': \"NASA's InSight 'Hears' Its First Meteoroid Impacts on Mars\",\n",
+       "  'preview': 'The Mars lander’s seismometer has picked up vibrations from four separate impacts in the past two years.'},\n",
+       " {'header': \"NASA's Perseverance Rover Investigates Geologically Rich Mars Terrain\",\n",
+       "  'preview': 'The latest findings provide greater detail on a region of the Red Planet that has a watery past and is yielding promising samples for the NASA-ESA Mars Sample Return campaign.'},\n",
+       " {'header': 'NASA to Host Briefing on Perseverance Mars Rover Mission Operations',\n",
+       "  'preview': 'Members of the mission will discuss the rover’s activities as it gathers samples in an ancient river delta.'},\n",
+       " {'header': \"NASA's Perseverance Makes New Discoveries in Mars' Jezero Crater\",\n",
+       "  'preview': 'The rover found that Jezero Crater’s floor is made up of volcanic rocks that have interacted with water.'},\n",
+       " {'header': \"10 Years Since Landing, NASA's Curiosity Mars Rover Still Has Drive\",\n",
+       "  'preview': 'Despite signs of wear, the intrepid spacecraft is about to start an exciting new chapter of its mission as it climbs a Martian mountain.'},\n",
+       " {'header': \"SAM's Top 5 Discoveries Aboard NASA's Curiosity Rover at Mars\",\n",
+       "  'preview': '“Selfie” of the Curiosity rover with inset showing the SAM instrument prior to installation on the rover.'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
