--- a/Starter_Code/part_2_mars_weather.ipynb
+++ b/Starter_Code/part_2_mars_weather.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Module 12 Challenge\n",
+    "# Module 11 Challenge\n",
     "## Deliverable 2: Scrape and Analyze Mars Weather Data"
    ]
   },
@@ -10488,18 +10488,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1867"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 2. How many Martian days' worth of data are there?\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m group_month \u001b[38;5;241m=\u001b[39m mars_dataframe\u001b[38;5;241m.\u001b[39mgroupby[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmonth\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# martian_days = mars_dataframe['sol'].count()\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# martian_days\u001b[39;00m\n\u001b[0;32m      5\u001b[0m group_month\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'method' object is not subscriptable"
+     ]
     }
    ],
    "source": [
@@ -10510,12 +10511,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[31], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 3. What is the average low temperature by month?\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# avg min temp groupby month\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m group_month \u001b[38;5;241m=\u001b[39m mars_dataframe\u001b[38;5;241m.\u001b[39mgroupby[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmonth\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      4\u001b[0m low_temp_avg \u001b[38;5;241m=\u001b[39m mars_dataframe[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmin_temp\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()\n\u001b[0;32m      5\u001b[0m low_temp_avg\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'method' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "# 3. What is the average low temperature by month?\n",
-    "avg min temp groupby month"
+    "# avg min temp groupby month\n",
+    "group_month = mars_dataframe.groupby['month']\n",
+    "low_temp_avg = mars_dataframe['min_temp'].mean()\n",
+    "low_temp_avg\n",
+    "# group_month"
    ]
   },
   {
@@ -10525,7 +10542,8 @@
    "outputs": [],
    "source": [
     "# Plot the average temperature by month\n",
-    "plot"
+    "# plot above\n",
+    "# low_temp_avg.plot.bar()"
    ]
   },
   {
@@ -10535,7 +10553,7 @@
    "outputs": [],
    "source": [
     "# Identify the coldest and hottest months in Curiosity's location\n",
-    "sort plot according to temp"
+    "# sort plot according to temp"
    ]
   },
   {
@@ -10545,7 +10563,7 @@
    "outputs": [],
    "source": [
     "# 4. Average pressure by Martian month\n",
-    "pressure av groupby month"
+    "# pressure av groupby month"
    ]
   },
   {
@@ -10555,7 +10573,7 @@
    "outputs": [],
    "source": [
     "# Plot the average pressure by month\n",
-    "plot"
+    "# plot"
    ]
   },
   {
